refactor: 优化 textToImage 方法的返回值
- 移除了不必要的 Collections 导入
- 将 return Collections.singletonList("") 替换为 return List.of()
-这个改动提高了代码的可读性和简洁性，同时保持了原有功能不变